force-app/main/default/objects/Birding_Location__c/Birding_Location__c.object-meta.xml
<CustomObject>
    <label>Birding Location</label>
    <pluralLabel>Birding Locations</pluralLabel>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>