force-app/main/default/objects/Birding_Location__c/fields/Habitat_Type__c.field-meta.xml
<CustomField>
    <fullName>Habitat_Type__c</fullName>
    <label>Habitat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wetland</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Grassland</fullName>
            </value>
            <value>
                <fullName>Coastal</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>